--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,50 @@
 {
     "version": 2,
-    "regions": ["sydney1", "dev1"], 
+    "regions": ["sydney1"],
     "builds": [
       {
         "src": "package.json",
         "use": "@vercel/node",
         "config": {
-          "buildCommand": "npm install && npm run build" 
+          "buildCommand": "npm install && npm run build"
         }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/redirect",
+        "status": 308,
+        "headers": {
+          "Location": "https://example.com/"
+        }
+      },
+      {
+        "src": "/custom-page",
+        "headers": {
+          "cache-control": "s-maxage=1000"
+        },
+        "dest": "/index.html"
+      },
+      {
+        "src": "/api",
+        "dest": "/my-api.js"
+      },
+      {
+        "src": "/users",
+        "methods": ["POST"],
+        "dest": "/users-api.js"
+      },
+      {
+        "src": "/users/(?<id>[^/]+)",
+        "dest": "/users-api.js?id=$id"
+      },
+      {
+        "src": "/legacy",
+        "status": 404
+      },
+      {
+        "src": "/.*",
+        "dest": "https://my-old-site.com"
       }
     ]
   }
-  
